--- a/instructions.html
+++ b/instructions.html
@@ -1485,7 +1485,8 @@ Dockerfile</h1>
 </div>
 
 
-<p><em>Last updated: January 16, 2025</em></p>
+<p><em>Last updated: January 21, 2025</em></p>
+<p><em>Jump to <a href="#quickstart">Quickstart</a></em></p>
 <div id="what-is-docker" class="section level1">
 <h1>What is Docker?</h1>
 <p><a href="https://docs.docker.com/desktop/">Docker</a> is an
@@ -1502,9 +1503,11 @@ you interact with. A Docker container can be seen as a smaller computer
 inside your computer. A helpful metaphor is to think of a container as a
 cake, while an image is the recipe to bake the cake. If the cake is
 good, you generally don’t want to change the recipe, and you want to
-reuse it to make multiple cakes in the future to give to your friends.
-Docker helps us manage the multiple cakes (containers) we’re baking
-(computers we’re running code in).</p>
+reuse it to make multiple cakes in the future. You also might want to
+share that recipe with your friends to use in their own kitchens. Docker
+helps us manage the multiple cakes (containers) we’re baking (computers
+we’re running code in) and in different kitchens (operating
+systems).</p>
 <p>The image below shows a concept map of the Docker lifecycle:</p>
 <center>
 <div class="float">
@@ -1529,21 +1532,59 @@ container with R and rJava installed to extract the table data. From
 there, we can export the raw data back into RStudio for cleaning and
 analysis.</p>
 </div>
-<div id="the-dockerfile" class="section level1">
-<h1>The Dockerfile</h1>
+<div id="quickstart" class="section level1">
+<h1>Quickstart: the Dockerfile</h1>
 <p>Docker builds images by reading the instructions from a Dockerfile. A
 Dockerfile is a text file containing instructions for building your
-source code.</p>
-<div id="step-0-prerequisites" class="section level2">
-<h2>Step 0: Prerequisites</h2>
+source code. You’ll need to navigate using the terminal, and general
+bash instructions are listed below.</p>
+<div id="step-0-install-docker" class="section level2">
+<h2>Step 0: Install Docker</h2>
 <p>Before using the Equity Center Dockerfile, you need to have Docker
 installed on your computer. Download Docker Desktop here: <a href="https://docs.docker.com/get-started/get-docker/" class="uri">https://docs.docker.com/get-started/get-docker/</a></p>
 </div>
 <div id="step-1-clone-the-git-repo" class="section level2">
 <h2>Step 1: Clone the Git Repo</h2>
+<p>In your terminal, change the current working directory to the
+location where you want the cloned directory. For this example, I’m
+using my Desktop so that I can find it easily.</p>
+<p>Then type or copy/paste the below:</p>
+<p><code>git clone https://github.com/virginiaequitycenter/docker</code></p>
+<p>And jump into this new directory.</p>
 </div>
-<div id="step-2-open-a-terminal" class="section level2">
-<h2>Step 2: Open a Terminal</h2>
+<div id="step-2-build-the-image" class="section level2">
+<h2>Step 2: Build the Image</h2>
+<p>Still in the terminal, type:</p>
+<p><code>docker build --tag &quot;ec&quot; .</code></p>
+<p>(Make sure you remember the . at the end)</p>
+</div>
+<div id="step-3-run-the-image-as-a-container-link-a-volume" class="section level2">
+<h2>Step 3: Run the Image as a Container &amp; Link a Volume</h2>
+<p>Because Docker containers are ephemeral, any data inside of the
+container will be lost when you close it. As a result we need to link a
+volume to the container so that you can save things locally from inside
+of it.</p>
+<p>To run the container, type:</p>
+<p><code>docker run --rm -ti ec R</code></p>
+<p>You should now be inside the new container and using the R language,
+as opposed to bash. To confirm this, you should see something like:</p>
+<blockquote>
+<p>R version 4.4.2 (2024-10-31) – “Pile of Leaves”</p>
+<p>Copyright (C) 2024 The R Foundation for Statistical Computing</p>
+<p>Platform: x86_64-pc-linux-gnu</p>
+</blockquote>
+<p>(Or whatever the most recent version of R is)</p>
+</div>
+<div id="step-4-load-the-r-libraries" class="section level2">
+<h2>Step 4: Load the R libraries</h2>
+<p>You have now switched from bash to R. This lets you run the familiar
+<code>library()</code> command from R so that you can install the two R
+packages you need: <code>rJava</code> and <code>tabulapdf</code>.</p>
+<p>To load and install the packages type the code below. Note this will
+take a few minutes to download.</p>
+<pre class="r"><code>library(rJava)
+install.packages(&quot;tabulapdf&quot;)
+library(tabulapdf)</code></pre>
 </div>
 </div>
 
