--- a/instructions.html
+++ b/instructions.html
@@ -1624,6 +1624,14 @@ tidied and analyzed.</p>
 <p>Happy Dockering!</p>
 </div>
 </div>
+<div id="resources" class="section level1">
+<h1>Resources</h1>
+<ul>
+<li><a href="https://do4ds.com/">DevOps for Data Science</a></li>
+<li><a href="https://rocker-project.org/">The Rocker Project</a></li>
+<li><a href="https://docs.ropensci.org/tabulapdf/">tabulapdf</a></li>
+</ul>
+</div>
 
 
 
